engine/tests/fixtures/invalid/http-cache/shape-input-update-task.tg
shape shape_input_update_task {
  name "Update Task Input"
  description "Input for updating a task"

  fields {
    task_id uuid required
  }

  status active
}
